# scrap

./: .gitignore  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml  ci.yml
docs/: bin-list.md  discussion.md  index.md  todo.md
