[project]
name = "scrap"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "babel~=2.10",
    "colorama~=0.4",
    "jinja2~=3.0",
    "markdown~=3.2",
    "mkdocs~=1.6",
    "mkdocs-get-deps~=0.2",
    "mkdocs-material~=9.5",
    "mkdocs-material-extensions~=1.3",
    "paginate~=0.5",
    "pygments~=2.16",
    "pymdown-extensions~=10.2",
    "regex>=2022.4",
    "requests~=2.26",
]
